stylus/main.styl
@import '../node_modules/font-awesome/css/font-awesome.min.css'
@import '../lib/select2/select2.css'

@import 'nib'
@import 'colors'

hero_font()
  font-family: 'adelle', Helvetica, serif
  .wf-loading &
    visibility: hidden

body_font()
  font-family: 'proxima-nova', Helvetica, sans-serif

form_font()
  font-family: 'Lucida Grande', sans-serif

HEADER_HEIGHT = 50px
HERO_HEIGHT = 400px + HEADER_HEIGHT
BROWSE_MENU_HEIGHT = 280px

HEADER_BORDER = 1px solid rgba(255, 255, 255, 0.6)
SOLID_HEADER_BORDER = 1px solid GRAY_LIGHT
HEADER_BORDER_FOCUS = 3px solid #FFF
SOLID_HEADER_BORDER_FOCUS = 3px solid #000

PHONE = 'only screen and (max-width: 699px)'
TABLET = 'only screen and (min-width: 700px) and (max-width: 1024px)'
DESKTOP = 'only screen and (min-width: 1025px)'

PHONE_FONT_SIZE = 15px
TABLET_FONT_SIZE = 16px
DESKTOP_FONT_SIZE = 18px

SIDEBAR_WIDTH = 336px
SIDEBAR_WIDTH_TABLET = 160px

GUTTER_PHONE = 0px
GUTTER_TABLET = 18px
GUTTER_DESKTOP = 36px

CONTENT_PADDING_PHONE = 18px
CONTENT_PADDING_TABLET = 36px
CONTENT_PADDING_DESKTOP = 54px

MAX_WIDTH = 1050px

// For convenience, when styling links

LINK = '&:link, &:visited'
HOVER = '&:hover, &:focus, &:active'

ellipsis()
  overflow: hidden
  text-overflow: ellipsis
  white-space: nowrap

.clearfix:before, .clearfix:after
  content: ""
  display: table

.clearfix:after
  clear: both

.off
  display: none

.gray
  color: GRAY

.red
  color: red

.center
  text-align: center

.strong
  font-weight: bold

.row
  clear: both
  width: 100%

  @media PHONE
    margin-bottom: (CONTENT_PADDING_PHONE / 2)
  @media TABLET
    margin-bottom: (CONTENT_PADDING_TABLET / 2)
  @media DESKTOP
    margin-bottom: (CONTENT_PADDING_DESKTOP / 2)

  &:last-child
    margin-bottom: 0

.row:before, .row:after // clearfix
  content: ""
  display: table
.row:after
  clear: both

.col
  float: left
  vertical-align: top
  @media PHONE
    float: none
    width: 100% !important

.col2
  @extend .col
  width: 50%

  &:first-child
    padding-right: 7px
    @media PHONE
      padding-right: 0
  &:last-child
    padding-left: 7px
    @media PHONE
      padding-left: 0

.col3
  @extend .col
  width: 33.3%
  &:first-child
    padding-right: 10px
    @media PHONE
      padding-right: 0
  &:nth-child(2)
    padding-left: 5px
    padding-right: 5px
    @media PHONE
      padding-left: 0
      padding-right: 0
  &:last-child
    padding-left: 10px
    @media PHONE
      padding-left: 0

.col4
  @extend .col
  width: 25%
  &:first-child
    padding-right: 10px
    @media PHONE
      padding-right: 0
  &:nth-child(2), &:nth-child(3)
    padding-left: 5px
    padding-right: 5px
    @media PHONE
      padding-left: 0
      padding-right: 0
  &:last-child
    padding-left: 10px
    @media PHONE
      padding-left: 0

.hide-phone
  @media PHONE
    display: none !important
.hide-tablet
  @media TABLET
    display: none !important

.phone
  @media TABLET
    display: none !important
  @media DESKTOP
    display: none !important
.tablet
  @media PHONE
    display: none !important
  @media DESKTOP
    display: none !important
.desktop
  @media PHONE
    display: none !important
  @media TABLET
    display: none !important

html.isMobile .hide-mobile
  display: none !important

*, *:before, *:after
  box-sizing: border-box

html.studynotes // i.e. not within ckeditor
  overflow-y: scroll

body
  body_font()
  color: GRAY_DARKEST
  font-size: 18px
  line-height: 1.5em
  margin: 0
  min-height: 100%
  padding: 0
  -webkit-font-smoothing: antialiased

  @media PHONE
    font-size: PHONE_FONT_SIZE
    line-height: 1.5em
  @media TABLET
    font-size: TABLET_FONT_SIZE
    line-height: 1.5em
  @media DESKTOP
    font-size: DESKTOP_FONT_SIZE
    line-height: 1.5em

body:not(.cke_editable)
  background: #F4F4F4 url('images/body.gif')

img, iframe, video
  max-width: 100%

img, video
  @media PHONE
    margin-bottom: (PHONE_FONT_SIZE * 1.5)px
  @media TABLET
    margin-bottom: (TABLET_FONT_SIZE * 1.5)px
  @media DESKTOP
    margin-bottom: (DESKTOP_FONT_SIZE * 1.5)px

a
  {LINK}
    color: BLUE
    text-decoration: none

  {HOVER}
    color: BLUE_DARK
    text-decoration: underline

a:hover img, a:active img
  -webkit-filter: brightness(0.8)
  filter: brightness(0.8)

a[href^="mailto"]
  font-weight: bold

h1, h2, h3, h4, h5
  hero_font()
  font-weight: 500
  margin: 0
  text-rendering: optimizelegibility

  .btn
    float: right

h1, .hero .title
  font-size: 2.3em
  line-height: (3 / 2.3)em
  margin-bottom: (1.5 / 2.3)em
  @media PHONE
    font-size: 1.5em
h2, .hero .desc
  font-size: 1.5em
  line-height: (1.5 / 1.5)em
  margin-bottom: (1.5 / 1.5)em
  @media PHONE
    font-size: 1.4em
h3
  font-size: 1.2em
  line-height: (1.5 / 1.2)em
  margin-bottom: (1.5 / 1.2)em
h4
  font-size: 1.125em
  line-height: (1.5 / 1.125)em
  margin-bottom: (1.5 / 1.125)em
h5
  font-size: 1em
  line-height: (1.5 / 1)em
  margin-bottom: 1.5em

p, blockquote, pre
  margin: 0 0 1.5em 0

blockquote
  border-left: 5px solid GRAY_LIGHT
  padding-left: 35px

hr
  background-color: GRAY_LIGHTER
  border: 0
  color: GRAY_LIGHTER
  height: 1px
  margin: 1.5em 0

//
// CONTENT
//

.wrap
  margin: 0 auto
  max-width: MAX_WIDTH
  padding-top: HEADER_HEIGHT
  position: relative
  width: 100%

  body.study-guides &
    max-width: 950px

  @media PHONE
    padding-left: GUTTER_PHONE
    padding-right: GUTTER_PHONE
    body.home &
      padding-top: 0
  @media TABLET
    padding-left: GUTTER_TABLET
    padding-right: GUTTER_TABLET
  @media DESKTOP
    padding-left: GUTTER_DESKTOP
    padding-right: GUTTER_DESKTOP

  html.main-sidebar &
    @media PHONE
      max-width: 100%
    @media TABLET
      max-width: MAX_WIDTH + SIDEBAR_WIDTH_TABLET + GUTTER_TABLET
    @media DESKTOP
      max-width: MAX_WIDTH + SIDEBAR_WIDTH + GUTTER_DESKTOP

.contentWrapper
  float: left
  width: 100%

  @media PHONE
    float: none
  @media TABLET
    margin-right: -(SIDEBAR_WIDTH_TABLET + GUTTER_TABLET)
  @media DESKTOP
    margin-right: -(SIDEBAR_WIDTH + GUTTER_DESKTOP)

.content, .twitter-timeline
  border-radius: 3px
  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.5)

  @media PHONE
    box-shadow: none

.content
  background: #FFF

  html.main-sidebar &
    @media PHONE
      margin-right: 0
    @media TABLET
      margin-right: SIDEBAR_WIDTH_TABLET + GUTTER_TABLET
    @media DESKTOP
      margin-right: SIDEBAR_WIDTH + GUTTER_DESKTOP

  @media PHONE
    border-radius: 0
    padding: CONTENT_PADDING_PHONE
  @media TABLET
    padding: CONTENT_PADDING_TABLET
  @media DESKTOP
    padding: CONTENT_PADDING_DESKTOP

  .like
    height: 26px

  .pull-left
    margin: 20px 20px 10px 0
    float: left

  .pull-right
    margin: 0 0 5px 20px
    float: right

    @media PHONE
      float: none
      margin: 0
    @media TABLET
      float: none
      margin: 0

  h1
    @media PHONE
      text-align: center

body.signup, body.signup2
  background: center center url('images/hero/colleges.jpg') no-repeat fixed
  background-size: cover

body.login
  background: center center url('images/hero/amjed-full.jpg') no-repeat fixed
  background-size: cover

body.home
  .hero .totalHits
    display: inline-block
    @media TABLET
      min-width: 150px
    @media DESKTOP
      min-width: 160px
    &.small
      font-size: 0.87em
      margin-bottom: -5px

  .content .row
    h3
      ellipsis()
    li
      margin-bottom: 0

.da
  .content &
    @media PHONE
      margin-left: -1 * CONTENT_PADDING_PHONE
      margin-right: -1 * CONTENT_PADDING_PHONE
      margin-bottom: 10px
      text-align: center
    @media TABLET
      margin-left: -1 * CONTENT_PADDING_TABLET
      margin-right: -1 * CONTENT_PADDING_TABLET
      margin-bottom: 10px
      text-align: center
  .sidebar &
    margin: 0 0 1em 0
    @media PHONE
      margin-left: -1 * CONTENT_PADDING_PHONE
      margin-right: -1 * CONTENT_PADDING_PHONE
      margin-bottom: 10px
      text-align: center
    @media TABLET
      margin-left: -1 * CONTENT_PADDING_TABLET
      margin-right: -1 * CONTENT_PADDING_TABLET
      margin-bottom: 10px
      text-align: center
    @media DESKTOP
      min-height: 250px
  img
    margin-bottom: 0

@import 'animations'
@import 'header'
@import 'browseMenus'
@import 'hero'
@import 'list'
@import 'toolbar'
@import 'buttons'
@import 'sidebar'
@import 'note'
@import 'user'
@import 'essay'
@import 'footer'
@import 'form'
@import 'editor'
@import 'notify-jackedup'
@import 'notify-libnotify'

